# meilisearch-changelog-generator-gha

./: Cargo.toml  Dockerfile  JSON.sh  LICENSE  README.md  action.yml  entrypoint.sh
.github/workflows/: blank.yml  test.yml
